# doover-legacy-bridge

./: .gitignore  README.md  build.sh  doover_config.json  pyproject.toml
src/cloud_app/: __init__.py  app_config.py  application.py
src/doover_legacy_bridge/: __init__.py  app_config.py  app_state.py  app_ui.py  application.py
src/integration/: __init__.py  app_config.py  application.py
tests/: test_imports.py  test_invoke.py
