[project]
name = "doover-legacy-bridge"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydoover>=0.4.13",
    "transitions>=0.9.2",
    "legacy-bridge-common",
]

[project.scripts]
export-config_cloud_app = "cloud_app.app_config:export"
export-config_integration = "integration.app_config:export"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloud_app", "src/integration"]

[dependency-groups]
dev = [
    "aiohttp>=3.11.18",
    "grpcio>=1.71.0",
    "protobuf>=6.30.2",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "requests>=2.32.3",
]

[tool.uv.sources]
legacy-bridge-common = { workspace = true }
pydoover = { git = "https://github.com/getdoover/pydoover", branch = "doover-2" }

[tool.uv.workspace]
members = [ "packages/*" ]
